2010-10-25  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-texlive-common):
	Added texlive-common.eclass

2010-10-24  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-texlive-module):
	Add texlive-module_synonyms_to_language_lua_line() and
	texlive-module_make_language_lua_lines() functions

2010-10-22  Ulrich Mueller  <ulm@gentoo.org>

	* Version 1.18 released.

2010-10-18  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-scons-utils):
	Add new eclass scons-utils
	(ebuild-mode-keywords-java-ant-2): Add java-ant_remove-taskdefs()
	function
	(ebuild-mode-keywords-eutils): Add path_exists() function

2010-10-16  Ulrich Mueller  <ulm@gentoo.org>

	* gentoo-syntax.el (ebuild-commands-list): Alphabetic order.
	Add "cleanrm", "depend", "fetchall", "info", and "pretend".

	* ebuild-mode-keywords.el (ebuild-mode-keywords-flag-o-matic):
	Update list of functions. Patch by Thomas Kahle <tom111@gmx.de>
	in bug 341255.

2010-10-14  Ulrich Mueller  <ulm@gentoo.org>

	* gentoo-syntax.el (ebuild-commands-list): Add "prepare" and
	"configure" ebuild commands.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-haskell-cabal):
	Remove duplicate keywords.

2010-08-24  Ulrich Mueller  <ulm@gentoo.org>

	* gentoo-syntax.el (ebuild-mode): Set fill-column to 72.

2010-08-09  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-haskell-cabal):
	Add haskell-cabal.eclass

2010-07-20  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-autotools-utils):
	Add new autotools-utils.eclass

2010-07-19  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-versionator):
	Add version_format_string() function

2010-07-13  Christian Faulhammer  <fauli@gentoo.org>

	* ebuild-mode-keywords.el (ebuild-mode-keywords-qt4-build):